# dance_scrap

./: pyproject.toml  scrapy.cfg
showdown_crawl/: middlewares.py  settings.py  spiders_runner.py  webdriver_singleton.py
showdown_crawl/items/: DancerScheduleItem.py
showdown_crawl/spiders/: ofd_spider.py  oneMillion_spider.py  ygx_spider.py
tutorial/:  justjerk_schedule.html   oneMillion_schedule.html   ygx_schedule.html  middlewares.py  ofd.html  pipelines.py  settings.py  spiders_runner.py
tutorial/items/: CustomMonth.py  DancerItem.py  DancerScheduleItem.py
tutorial/spiders/: ofd_spider.py  oneMillion_spider.py  ygx_spider.py
tutorial/tutorial/: middlewares.py  selenium_test.py  settings.py
tutorial/tutorial/items/: CustomMonth.py  DanceSchedule.py  Dancer.py
tutorial/tutorial/spiders/: 1million_dancer_spider.py  1million_spider.py  dance_schedule_spider.py  justjerk_spider.py  ofd_spider.py  ygx_spider.py
