[tool.poetry]
name = "scrapy-tutorial"
version = "0.1.0"
description = ""
authors = ["hwang seung joon <asherolleh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.0"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
